--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "build": "npx tsc",
+    "start": "npm run build && node dist/server.js",
+    "dev": "npx nodemon",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "npm run build && node dist/seeds/index.js"
   },
   "dependencies": {
     "jwt-decode": "^4.0.0",
